# anyrun

./: Cargo.toml
plugins/applications/: Cargo.toml
plugins/applications/src/: lib.rs
plugins/run_bin/: Cargo.toml
plugins/run_bin/src/: lib.rs  scrubber.rs
