[package]
name = "run_bin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyrun-plugin = { path = "../../anyrun-plugin" }
abi_stable = "0.11"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
nucleo = "0.5"
